apps/stockpit/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stockpit-api
  namespace: stockpit
spec:
  replicas: 3
  selector:
    matchLabels:
      app: stockpit-api
  template:
    metadata:
      labels:
        app: stockpit-api
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
      containers:
        - name: api
          image: ghcr.io/joseajrgr/stockpit-api:cec1c5e882f17fa9df76f8549aba7723a389473c
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          lifecycle:
            preStop:
              exec:
                command: ["sleep", "5"]
---
apiVersion: v1
kind: Service
metadata:
  name: stockpit-api http
  namespace: stockpit
spec:
  selector:
    app: stockpit
  ports:
    - name: http
      port: 8000
      targetPort: 8000
